fix collapse-y class

--- a/src/main.css
+++ b/src/main.css
@@ -45,9 +45,17 @@ main#UI {
 .menu__item-content {
   background-color: aqua;
   transition: all 300ms;
+  height: 100%;
 }
 .menu__item[toggled="true"].collapse-x {
   width: 50px;
+}
+.menu__item[toggled="true"].collapse-y {
+  height: 50px;
+  .menu__item-content {
+    opacity: 0;
+    height: 0;
+  }
 }
 .profile {
   display: flex;
